# alioth

./: .gitignore  Cargo.toml  rustfmt.toml
.github/workflows/: rust.yml
alioth/: Cargo.toml
alioth-cli/: Cargo.toml
alioth-cli/src/: boot.rs  boot_test.rs  main.rs  objects.rs  server.rs  vu.rs
alioth-cli/src/boot/: boot.rs  boot_test.rs  server.rs
alioth-macros/: Cargo.toml
alioth-macros/src/: errors.rs  layout.rs
alioth/src/: errors.rs  lib.rs  vm.rs
alioth/src/arch/: arch.rs
alioth/src/arch/aarch64/: layout.rs  psci.rs  reg.rs
alioth/src/arch/loongarch64/: loongarch64.rs  reg.rs
alioth/src/arch/x86_64/: cpuid.rs  layout.rs  msr.rs  reg.rs
alioth/src/blk/: blk.rs  qcow2.rs  qcow2_test.rs
alioth/src/board/: aarch64.rs  board.rs  board_aarch64.rs  board_loongarch64.rs  board_x86_64.rs  x86_64.rs
alioth/src/board/board_x86_64/: board_x86_64.rs  sev.rs
alioth/src/cpu/: cpu.rs  cpu_aarch64.rs
alioth/src/cpu/cpu_x86_64/: cpu_x86_64.rs  sev.rs  tdx.rs
alioth/src/device/: cmos.rs  console.rs  device.rs  fw_dbg.rs  i8042.rs  net.rs  pl011.rs  pl031.rs  pvpanic.rs  pvpanic_test.rs  serial.rs
alioth/src/device/fw_cfg/: acpi.rs  fw_cfg.rs
alioth/src/firmware/acpi/: acpi.rs  bindings.rs  reg.rs  timer.rs
alioth/src/firmware/dt/: dt.rs  dt_test.rs  dtb.rs  dtb_test.rs
alioth/src/fuse/: bindings.rs  fuse.rs  passthrough.rs
alioth/src/hv/: hv.rs  hv_test.rs
alioth/src/hv/hvf/: bindings.rs  hvf.rs  vm.rs
alioth/src/hv/hvf/vcpu/: vcpu.rs  vcpu_test.rs  vmentry.rs  vmexit.rs
alioth/src/hv/kvm/: aarch64.rs  bindings.rs  device.rs  kvm.rs  kvm_x86_64_test.rs  sev.rs  vm.rs  vmentry.rs  vmexit.rs  x86_64.rs  x86_64_test.rs
alioth/src/hv/kvm/kvm_x86_64/: kvm_x86_64.rs  kvm_x86_64_test.rs
alioth/src/hv/kvm/vcpu/: aarch64.rs  vcpu.rs  vcpu_aarch64.rs  vcpu_loongarch64.rs  vcpu_x86_64_test.rs  x86_64.rs  x86_64_test.rs
alioth/src/hv/kvm/vcpu/vcpu_x86_64/: vcpu_x86_64.rs
alioth/src/hv/kvm/vm/: aarch64.rs  vm.rs  vm_loongarch64.rs  vm_test.rs  vm_x86_64.rs  x86_64.rs
alioth/src/hv/kvm/vm/vm_x86_64/: tdx.rs
alioth/src/loader/: loader.rs
alioth/src/loader/firmware/: firmware_x86_64.rs  x86_64.rs
alioth/src/loader/linux/: aarch64.rs  linux.rs  linux_loongarch64.rs  x86_64.rs
alioth/src/loader/xen/: xen.rs
alioth/src/mem/: addressable.rs  addressable_test.rs  emulated.rs  emulated_test.rs  mapped.rs  mapped_test.rs  mem.rs
alioth/src/pci/: bus.rs  bus_test.rs  cap.rs  cap_test.rs  config.rs  config_test.rs  host_bridge.rs  host_bridge_test.rs  pci.rs  segment.rs  segment_test.rs
alioth/src/sync/notifier/: notifier_linux.rs  notifier_macos.rs  notifier_test.rs
alioth/src/sys/linux/: ioctl.rs  ioctl_test.rs  kvm.rs  vfio.rs  vhost.rs
alioth/src/sys/macos/: xpc_test.rs
alioth/src/utils/: endian.rs  ioctls.rs  uds.rs  utils.rs
alioth/src/vfio/: cdev.rs  container.rs  device.rs  group.rs  iommu.rs  iommu_test.rs  pci.rs  vfio.rs
alioth/src/virtio/: pci.rs  vhost.rs  virtio.rs  virtio_test.rs  vu.rs
alioth/src/virtio/dev/: balloon.rs  blk.rs  dev.rs  entropy.rs  entropy_test.rs  fs.rs
alioth/src/virtio/dev/fs/: fs.rs  shared_dir.rs  vu.rs
alioth/src/virtio/dev/net/: mac_addr.rs  mac_addr_test.rs  net.rs  tap.rs  vmnet.rs
alioth/src/virtio/dev/vsock/: uds_vsock.rs  uds_vsock_test.rs  vhost_vsock.rs  vsock.rs
alioth/src/virtio/queue/: handlers.rs  packed.rs  packed_test.rs  queue.rs  queue_test.rs  split.rs  split_test.rs
alioth/src/virtio/vhost/: bindings.rs  ioctls.rs  vhost.rs
alioth/src/virtio/vhost_user/: vhost_user.rs
alioth/src/virtio/vu/: backend.rs  bindings.rs  conn.rs  frontend.rs  vu.rs
alioth/src/virtio/worker/: io_uring.rs  mio.rs
alioth/src/vm/: vm.rs  vm_aarch64.rs
alioth/src/vm/vm_x86_64/: sev.rs  tdx.rs  vm_x86_64.rs
libmock/: Cargo.toml
libmock/src/: dylib.rs  lib.rs
lsvirtio/: Cargo.toml
lsvirtio/src/: main.rs
serde-aco-derive/: Cargo.toml
serde-aco-derive/src/: help.rs
(+3 files in other folders)
