[workspace]
members = [
  "alioth",
  "alioth-cli",
  "alioth-macros",
  "serde-aco",
  "serde-aco-derive",
]
resolver = "2"

[workspace.package]
authors = ["Changyuan Lyu <changyuan.lv@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/google/alioth"
edition = "2024"

[workspace.dependencies]
alioth = { version = "0.9.0", path = "alioth" }
alioth-macros = { version = "0.7.0", path = "alioth-macros" }
assert_matches = "1"
ctor = "0.6"
flexi_logger = "0.31"
parking_lot = { version = "0.12", features = ["hardware-lock-elision"] }
proc-macro2 = "1"
quote = { version = "1" }
rstest = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde-aco = { version = "0.8.0", path = "serde-aco" }
serde-aco-derive = { version = "0.7.0", path = "serde-aco-derive" }
snafu = "0.8.9"
syn = { version = "2", features = ["full"] }
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
