[package]
name = "alioth-cli"
version = "0.9.0"
edition.workspace = true
description = "Command-line interface for Alioth, an experimental Type-2 hypervisor."
repository.workspace = true
authors.workspace = true
license.workspace = true
readme = "../README.md"

[dependencies]
alioth.workspace = true
clap = { version = "4", features = ["derive"] }
flexi_logger.workspace = true
log = "0.4"
serde.workspace = true
serde-aco.workspace = true
snafu.workspace = true

[[bin]]
path = "src/main.rs"
name = "alioth"
