[package]
name = "alioth-cli"
version = "0.10.0"
edition.workspace = true
description = "Command-line interface for Alioth, an experimental Type-2 hypervisor."
repository.workspace = true
authors.workspace = true
license.workspace = true
readme = "../README.md"

[dependencies]
log = "0.4"
flexi_logger.workspace = true
clap = { version = "4", features = ["derive"] }
snafu.workspace = true
alioth.workspace = true
serde.workspace = true
serde-aco.workspace = true
tokio = "1.48.0"
axum = { path = "../../axum/axum" }

[[bin]]
path = "src/main.rs"
name = "alioth"
