[package]
name = "alioth"
version = "0.9.0"
edition.workspace = true
description = "Core library for Alioth, an experimental Type-2 hypervisor."
repository.workspace = true
authors.workspace = true
license.workspace = true

[features]
test-hv = []

[dependencies]
alioth-macros.workspace = true
bitfield = "0.19.4"
bitflags = "2.9.4"
libc = "0.2.176"
log = "0.4"
mio = { version = "1", features = ["os-poll", "os-ext", "net"] }
parking_lot.workspace = true
serde.workspace = true
serde-aco.workspace = true
snafu.workspace = true
zerocopy = { version = "0.8.31", features = ["derive", "alloc"] }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7"

[dev-dependencies]
assert_matches.workspace = true
ctor.workspace = true
flexi_logger.workspace = true
rstest.workspace = true
tempfile.workspace = true
